--- a/index.html
+++ b/index.html
@@ -1,67 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minds Of Brands</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f4f4f9;
-      color: #333;
-    }
-    header {
-      background: #ffcc00;
-      padding: 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-    }
-    nav {
-      margin-top: 10px;
-    }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-      color: #333;
-    }
-    section {
-      padding: 40px;
-      text-align: center;
-    }
-    footer {
-      background: #222;
-      color: white;
-      text-align: center;
-      padding: 15px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Minds Of Brands</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+<section class="hero">
+  <h2>Boosting Brands in the Digital Territories</h2>
+  <p>Your growth partner in SEO, SMM, Lead Gen, & Branding</p>
+  <a href="#contact" class="btn">Get Started</a>
+</section>
 
-  <section>
-    <h2>Welcome to Minds Of Brands</h2>
-    <p>Boosting Brands in the Digital Territories 🚀</p>
-  </section>
-
-  <footer>
-    <p>© 2025 Minds Of Brands. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+<style>
+.hero {
+  height: 80vh;
+  background: url('assets/hero.jpg') center/cover no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+}
+.hero h2 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+.hero p {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+  max-width: 600px;
+}
+.btn {
+  padding: 15px 30px;
+  background: #FFD700;
+  color: #222;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 6px;
+}
+.btn:hover {
+  background: #e6c200;
+}
+</style>
