--- a/index.html
+++ b/index.html
@@ -1,38 +1,115 @@
-<section class="hero">
-  <h2>Boosting Brands in the Digital Territories</h2>
-  <p>Your growth partner in SEO, SMM, Lead Gen, & Branding</p>
-  <a href="#contact" class="btn">Get Started</a>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Minds Of Brands | Digital Marketing & Branding</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Minds Of Brands helps businesses grow with SEO, Social Media Marketing, Lead Generation, and Branding solutions.">
+  <meta name="keywords" content="Digital Marketing, SEO, Social Media Marketing, Lead Generation, Branding, Minds Of Brands">
+  <meta name="author" content="Minds Of Brands">
+  
+  <!-- Open Graph for Social Sharing -->
+  <meta property="og:title" content="Minds Of Brands | Digital Marketing & Branding">
+  <meta property="og:description" content="Boosting Brands in the digital territories with SEO, SMM, and Lead Generation.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://yourgithubusername.github.io/">
+  <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Minds+Of+Brands">
 
-<style>
-.hero {
-  height: 80vh;
-  background: url('assets/hero.jpg') center/cover no-repeat;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  color: white;
-}
-.hero h2 {
-  font-size: 3rem;
-  margin-bottom: 1rem;
-}
-.hero p {
-  font-size: 1.2rem;
-  margin-bottom: 2rem;
-  max-width: 600px;
-}
-.btn {
-  padding: 15px 30px;
-  background: #FFD700;
-  color: #222;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 6px;
-}
-.btn:hover {
-  background: #e6c200;
-}
-</style>
+  <!-- Styling -->
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; }
+
+    header {
+      background: #000;
+      color: #fff;
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    header h1 { font-size: 24px; }
+    nav ul { list-style: none; display: flex; }
+    nav ul li { margin-left: 20px; }
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav ul li a:hover { color: #f4b400; }
+
+    .hero {
+      background: url('https://via.placeholder.com/1600x600.png?text=Digital+Marketing+Made+Easy') no-repeat center center/cover;
+      color: white;
+      text-align: center;
+      padding: 120px 20px;
+    }
+    .hero h2 { font-size: 48px; margin-bottom: 20px; }
+    .hero p { font-size: 20px; margin-bottom: 20px; }
+    .btn {
+      background: #f4b400;
+      color: #000;
+      padding: 12px 25px;
+      text-decoration: none;
+      font-size: 18px;
+      border-radius: 5px;
+    }
+    .btn:hover { background: #333; color: #fff; }
+
+    .section { padding: 60px 20px; text-align: center; }
+    .section h2 { margin-bottom: 20px; font-size: 32px; }
+
+    footer {
+      background: #111;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      margin-top: 30px;
+    }
+    footer p { font-size: 14px; }
+  </style>
+</head>
+<body>
+
+  <!-- HEADER -->
+  <header>
+    <h1>Minds Of Brands</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="product.html">Product</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- HERO -->
+  <section class="hero">
+    <h2>Boosting Brands in the Digital Territories</h2>
+    <p>SEO | Social Media | Lead Generation | Branding | CRM</p>
+    <a href="services.html" class="btn">Get Started</a>
+  </section>
+
+  <!-- ABOUT SECTION -->
+  <section class="section">
+    <h2>Why Choose Us?</h2>
+    <p>We help businesses scale with data-driven strategies, affordable marketing solutions, and world-class digital campaigns.</p>
+  </section>
+
+  <!-- SERVICES SECTION -->
+  <section class="section" style="background:#f9f9f9;">
+    <h2>Our Services</h2>
+    <p>SEO | Social Media Marketing | Lead Generation | Email Marketing | Branding | CRM</p>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
