--- a/contactus.html
+++ b/contactus.html
@@ -109,7 +109,7 @@
   <!-- CONTACT FORM -->
   <div class="container">
     <h2>Contact Us</h2>
-    <form action="https://formspree.io/f/yourformid" method="POST">
+    <form action="https://formspree.io/f/xwpqdlpb" method="POST">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="_replyto" placeholder="Your Email" required>
       <input type="text" name="subject" placeholder="Subject" required>
@@ -119,10 +119,11 @@
 
     <div class="contact-details">
       <h3>Our Contact Details</h3>
-      <p>📍 Address: MindsofBrands, Bhilwara, Rajasthan, India</p>
-      <p>📞 Phone: +91 12345 67890</p>
-      <p>✉️ Email: <a href="mailto:info@mindsofbrands.com">info@mindsofbrands.com</a></p>
-      <p>🌐 Website: <a href="https://mindsofbrands.com" target="_blank">mindsofbrands.com</a></p>
+      <p>📍 Locatios         : India & Canada</p>
+      <p>📞 Phone & Whats app: +91 6378789927</p>
+      <p>📞 Whats app        : +1 4169020823</p>
+      <p>✉️ Email            : <a href="mailto:garvagrawal0770@gmail.com">info@mindsofbrands.com</a></p>
+      <p>🌐 Website          : <a href="https://mindsofbrands.com" target="_blank">mindsofbrands.com</a></p>
     </div>
   </div>
 
