--- a/index.html
+++ b/index.html
@@ -46,7 +46,18 @@
       text-align: center;
       padding: 120px 20px;
     }
-    .hero h2 { font-size: 48px; margin-bottom: 20px; }
+
+    /* Gradient Title */
+    .hero h2 {
+      font-size: 48px;
+      margin-bottom: 20px;
+      font-weight: bold;
+      background: linear-gradient(90deg, #f4b400, #ff6a00); /* Yellow to orange gradient */
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+    }
+
     .hero p { font-size: 20px; margin-bottom: 20px; }
     .btn {
       background: #f4b400;
