--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
   <!-- Styling -->
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; }
-
+    body { 
+  font-family: Arial, sans-serif; 
+  line-height: 1.6; 
+  color: #fff; /* text color white for contrast */ 
+  background-color: #000; /* black background */ 
+}
     header {
       background: #000;
       color: #fff;
