--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,133 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Portfolio | Minds of Brands</title>
-<link rel="stylesheet" href="../style.css">
-<style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio - Minds Of Brands</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Explore the portfolio of Minds Of Brands showcasing successful projects across industries with digital marketing, branding, and creative solutions.">
+  <meta name="keywords" content="Minds Of Brands Portfolio, Digital Marketing Projects, Branding, SEO, Social Media Marketing, Case Studies">
+  <meta name="author" content="Minds Of Brands">
+
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-        font-family: 'Arial', sans-serif;
-        color: #fff;
-        background-color: #000;
-        margin: 0;
-        padding: 0;
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      color: #fff;
+      background-color: #000;
     }
 
-    .portfolio-hero {
-        text-align: center;
-        padding: 80px 20px;
-        background-color: #111;
+    /* Header */
+    header {
+      background: #000;
+      color: #fff;
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      border-bottom: 1px solid #111;
     }
-    .portfolio-hero h1 {
-        font-size: 3em;
-        color: #0d6efd;
-        margin-bottom: 20px;
+    header h1 {
+      font-size: 24px;
+      font-weight: bold;
+      background: linear-gradient(90deg, #00f, #0ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
-    .portfolio-hero p {
-        font-size: 1.2em;
-        color: #ccc;
-        margin-bottom: 30px;
+    nav ul { list-style: none; display: flex; }
+    nav ul li { margin-left: 20px; }
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
     }
-    .cta-btn {
-        background-color: #6f42c1;
-        color: #fff;
-        padding: 12px 25px;
-        text-decoration: none;
-        border-radius: 5px;
-        font-weight: bold;
+    nav ul li a:hover { color: #0ff; }
+
+    /* Main container */
+    .container {
+      max-width: 1000px;
+      margin: 60px auto;
+      padding: 40px 20px;
     }
 
-    .business-section {
-        max-width: 1100px;
-        margin: 60px auto;
-        padding: 0 20px;
+    /* Headings */
+    h2 {
+      text-align: center;
+      margin-bottom: 30px;
+      font-size: 36px;
+      background: linear-gradient(90deg, #00f, #0ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
-    .business-section h2 {
-        font-size: 2em;
-        color: #0d6efd;
-        margin-bottom: 15px;
+
+    h3 {
+      font-size: 28px;
+      margin-bottom: 15px;
+      background: linear-gradient(90deg, #00f, #0ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
-    .business-section p {
-        font-size: 1.1em;
-        line-height: 1.6em;
-        margin-bottom: 25px;
-        color: #ccc;
+
+    p {
+      font-size: 16px;
+      color: #fff;
+      margin-bottom: 20px;
+    }
+
+    .section {
+      margin-bottom: 60px;
+      padding: 20px;
+      background-color: #111;
+      border-radius: 10px;
+      box-shadow: 0px 4px 12px rgba(0,0,0,0.5);
     }
 
     .visit-btn {
-        display: inline-block;
-        background-color: #0d6efd;
-        color: #fff;
-        padding: 10px 20px;
-        border-radius: 5px;
-        text-decoration: none;
-        margin-bottom: 30px;
+      display: inline-block;
+      background: linear-gradient(90deg, #00f, #0ff);
+      color: #000;
+      padding: 10px 20px;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+      margin-bottom: 20px;
     }
+    .visit-btn:hover { opacity: 0.8; }
 
     .gallery {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-        gap: 20px;
-        margin-bottom: 50px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
     }
     .gallery img {
-        width: 100%;
-        height: auto;
-        border-radius: 10px;
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
     }
-</style>
+
+    /* Footer */
+    footer {
+      background: #000;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+    footer p { font-size: 14px; }
+    footer a {
+      color: #0ff;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+    footer a:hover { text-decoration: underline; }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      h2 { font-size: 28px; }
+      h3 { font-size: 22px; }
+    }
+  </style>
 </head>
 <body>
 
-<!-- Hero Section -->
-<section class="portfolio-hero">
-    <h1>Our Portfolio</h1>
-    <p>Showcasing our work across industries and helping businesses grow digitally</p>
-    <a href="../contact.html" class="cta-btn">Contact Us</a>
-</section>
+  <!-- HEADER -->
+  <header>
+    <h1>Minds Of Brands</h1>
+    <nav>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../services.html">Services</a></li>
+        <li><a href="../product.html">Product</a></li>
+        <li><a href="../about.html">About Us</a></li>
+        <li><a href="../contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<!-- Business 1: TechNova Solutions -->
-<section class="business-section">
-    <h2>TechNova Solutions</h2>
-    <p>TechNova Solutions is a leading IT and software development company, delivering innovative digital solutions for businesses of all sizes. From custom software applications to web and mobile development, TechNova ensures seamless technology integration for clients. Their portfolio highlights projects in automation, cloud solutions, and business analytics. Through strategic digital marketing, TechNova boosts client engagement and drives measurable results. Our collaboration focused on designing responsive websites, enhancing UX/UI, and implementing lead generation campaigns. Each project reflects a commitment to quality, innovation, and growth. The results include increased online visibility, higher conversion rates, and stronger client trust.</p>
+  <!-- Portfolio Intro -->
+  <div class="container section">
+    <h2>Our Portfolio</h2>
+    <p>
+      Showcasing our work across industries and helping businesses grow digitally through creative, strategic, and measurable solutions.
+    </p>
+  </div>
+
+  <!-- Business 1 -->
+  <div class="container section">
+    <h3>TechNova Solutions</h3>
+    <p>
+      TechNova Solutions is a leading IT and software development company, delivering innovative digital solutions for businesses of all sizes. From custom software applications to web and mobile development, TechNova ensures seamless technology integration. Our collaboration focused on responsive websites, enhanced UX/UI, and lead generation campaigns. Results included increased visibility, higher conversions, and stronger client trust.
+    </p>
     <a href="https://technova.com" class="visit-btn" target="_blank">Visit Website</a>
-
     <div class="gallery">
-        <img src="https://via.placeholder.com/400x300?text=TechNova+1" alt="TechNova Image 1">
-        <img src="https://via.placeholder.com/400x300?text=TechNova+2" alt="TechNova Image 2">
-        <img src="https://via.placeholder.com/400x300?text=TechNova+3" alt="TechNova Image 3">
-        <img src="https://via.placeholder.com/400x300?text=TechNova+4" alt="TechNova Image 4">
+      <img src="https://via.placeholder.com/400x300?text=TechNova+1" alt="TechNova Image 1">
+      <img src="https://via.placeholder.com/400x300?text=TechNova+2" alt="TechNova Image 2">
+      <img src="https://via.placeholder.com/400x300?text=TechNova+3" alt="TechNova Image 3">
+      <img src="https://via.placeholder.com/400x300?text=TechNova+4" alt="TechNova Image 4">
     </div>
-</section>
+  </div>
 
-<!-- Business 2: Lexify Legal Group -->
-<section class="business-section">
-    <h2>Lexify Legal Group</h2>
-    <p>Lexify Legal Group provides expert legal services to individuals and businesses, specializing in corporate law, litigation, and advisory services. Their approach combines professionalism with client-focused strategies to ensure optimal outcomes. Our portfolio work showcases website design, brand positioning, and digital marketing campaigns aimed at increasing client inquiries and building credibility. We developed a professional, modern online presence that communicates trust, expertise, and reliability. Through content marketing, SEO, and social media strategies, Lexify effectively connects with potential clients. The collaboration demonstrates how thoughtful digital marketing can elevate a professional service brand. Results include stronger online reputation, higher engagement, and enhanced brand authority.</p>
+  <!-- Business 2 -->
+  <div class="container section">
+    <h3>Lexify Legal Group</h3>
+    <p>
+      Lexify Legal Group provides expert legal services specializing in corporate law, litigation, and advisory services. Our portfolio work included website design, brand positioning, and digital campaigns aimed at building credibility and increasing inquiries. SEO and social media strategies effectively connected Lexify with clients. The results included stronger online reputation, higher engagement, and brand authority.
+    </p>
     <a href="https://lexify.com" class="visit-btn" target="_blank">Visit Website</a>
-
     <div class="gallery">
-        <img src="https://via.placeholder.com/400x300?text=Lexify+1" alt="Lexify Image 1">
-        <img src="https://via.placeholder.com/400x300?text=Lexify+2" alt="Lexify Image 2">
-        <img src="https://via.placeholder.com/400x300?text=Lexify+3" alt="Lexify Image 3">
-        <img src="https://via.placeholder.com/400x300?text=Lexify+4" alt="Lexify Image 4">
+      <img src="https://via.placeholder.com/400x300?text=Lexify+1" alt="Lexify Image 1">
+      <img src="https://via.placeholder.com/400x300?text=Lexify+2" alt="Lexify Image 2">
+      <img src="https://via.placeholder.com/400x300?text=Lexify+3" alt="Lexify Image 3">
+      <img src="https://via.placeholder.com/400x300?text=Lexify+4" alt="Lexify Image 4">
     </div>
-</section>
+  </div>
 
-<!-- Business 3: SweetCrave Foods -->
-<section class="business-section">
-    <h2>SweetCrave Foods</h2>
-    <p>SweetCrave Foods is a vibrant sweet shop and quick-service food outlet, offering a wide range of traditional sweets, snacks, and modern treats. Their goal is to delight customers with high-quality products and an enjoyable culinary experience. Our portfolio showcases brand development, social media campaigns, and promotional strategies that increase footfall and online orders. We highlighted their product variety through engaging visuals, interactive menus, and content marketing. Digital marketing efforts include Instagram and Facebook campaigns, seasonal promotions, and influencer collaborations. Each project reflects creativity, customer engagement, and business growth. The results include stronger brand recognition, increased sales, and loyal customer engagement.</p>
+  <!-- Business 3 -->
+  <div class="container section">
+    <h3>SweetCrave Foods</h3>
+    <p>
+      SweetCrave Foods is a vibrant sweet shop and quick-service outlet offering traditional sweets and modern treats. Our portfolio included brand development, social media campaigns, and promotions that boosted sales and engagement. We showcased product variety through visuals, interactive menus, and influencer collaborations. The results included stronger recognition, higher sales, and loyal customer engagement.
+    </p>
     <a href="https://sweetcrave.com" class="visit-btn" target="_blank">Visit Website</a>
-
     <div class="gallery">
-        <img src="https://via.placeholder.com/400x300?text=SweetCrave+1" alt="SweetCrave Image 1">
-        <img src="https://via.placeholder.com/400x300?text=SweetCrave+2" alt="SweetCrave Image 2">
-        <img src="https://via.placeholder.com/400x300?text=SweetCrave+3" alt="SweetCrave Image 3">
-        <img src="https://via.placeholder.com/400x300?text=SweetCrave+4" alt="SweetCrave Image 4">
+      <img src="https://via.placeholder.com/400x300?text=SweetCrave+1" alt="SweetCrave Image 1">
+      <img src="https://via.placeholder.com/400x300?text=SweetCrave+2" alt="SweetCrave Image 2">
+      <img src="https://via.placeholder.com/400x300?text=SweetCrave+3" alt="SweetCrave Image 3">
+      <img src="https://via.placeholder.com/400x300?text=SweetCrave+4" alt="SweetCrave Image 4">
     </div>
-</section>
+  </div>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy; 2025 Minds Of Brands. All rights reserved.</p>
+    <p>
+      <a href="../index.html">Home</a> |
+      <a href="../services.html">Services</a> |
+      <a href="../product.html">Product</a> |
+      <a href="../about.html">About Us</a> |
+      <a href="../contact.html">Contact</a>
+    </p>
+  </footer>
 
 </body>
 </html>
