--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -146,7 +146,8 @@
         <li><a href="../services.html">Services</a></li>
         <li><a href="../product.html">Product</a></li>
         <li><a href="../about.html">About Us</a></li>
-        <li><a href="../contact.html">Contact</a></li>
+        <li><a href="../contactus.html">Contact</a></li>
+        <li><a href="../portfolio/index.html">Portfolio</a></li>
       </ul>
     </nav>
   </header>
