--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
         <li><a href="services.html">Services</a></li>
         <li><a href="product.html">Product</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contactus.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -162,7 +162,7 @@
       <a href="services.html">Services</a> |
       <a href="product.html">Product</a> |
       <a href="about.html">About Us</a> |
-      <a href="contact.html">Contact</a>
+      <a href="contactus.html">Contact</a>
     </p>
   </footer>
 
