--- a/product.html
+++ b/product.html
@@ -111,7 +111,7 @@
         <li><a href="services.html">Services</a></li>
         <li><a href="product.html">Product</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contactus.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -134,7 +134,7 @@
     <p>It helps you increase productivity by keeping your tasks organized and timely.</p>
     <p>Stay ahead of your schedule and manage your life smarter with Maina.</p>
 
-    <a href="contact.html" class="btn">Download Maina (Contact Us)</a>
+    <a href="contactus.html" class="btn">Download Maina (Contact Us)</a>
   </div>
 
   <!-- FOOTER -->
