--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
   <!-- HEADER -->
   <header>
-    <h1><a href="index.html">Minds Of Brands</a>m</h1>
+    <h1><a href="index.html">Minds Of Brands</a></h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
